src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__merge_propagates_parameter_additions.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: output
---
Model: fixtures/design_addition_propagation/eval.on
Tests: 0/0
Parameters:
  result = Number(Scalar(10.0))
