src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__overlay_submodel_with_apply_sugar.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
assertion_line: 89
expression: "run_fixture(\"design_overlay/submodel_with_apply.on\")"
---
Model: fixtures/design_overlay/submodel_with_apply.on
Tests: 0/0
Parameters:
  mass = MeasuredNumber(MeasuredNumber { normalized_value: NormalizedNumber(Scalar(100.0)), unit: Unit { dimension_map: DimensionMap({Mass: 1.0}), magnitude: 1.0, is_db: false, display_unit: Unit { name: "kg", exponent: 1.0 } } })
  w_a = MeasuredNumber(MeasuredNumber { normalized_value: NormalizedNumber(Scalar(372.0)), unit: Unit { dimension_map: DimensionMap({Mass: 1.0, Distance: 1.0, Time: -2.0}), magnitude: 1.0, is_db: false, display_unit: Unit { name: "N", exponent: 1.0 } } })
  w_b = MeasuredNumber(MeasuredNumber { normalized_value: NormalizedNumber(Scalar(981.0)), unit: Unit { dimension_map: DimensionMap({Mass: 1.0, Distance: 1.0, Time: -2.0}), magnitude: 1.0, is_db: false, display_unit: Unit { name: "N", exponent: 1.0 } } })
  total = MeasuredNumber(MeasuredNumber { normalized_value: NormalizedNumber(Scalar(1353.0)), unit: Unit { dimension_map: DimensionMap({Mass: 1.0, Distance: 1.0, Time: -2.0}), magnitude: 1.0, is_db: false, display_unit: Unit { name: "N", exponent: 1.0 } } })
